# htx_assignment

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  alembic.ini  htx_transciber.db  pyproject.toml  pyrightconfig.json  supervisord.conf
backend/alembic/: env.py
backend/alembic/versions/: 7606299effe3_create_transcriptions_table.py
backend/deploy/: env
backend/htx_transcriber/: .env  app.py  database.py  main.py
backend/htx_transcriber/api/: router.py  transcribe.py
backend/htx_transcriber/models/: transcription.py
backend/htx_transcriber/services/: transcription_service.py
backend/htx_transcriber/tests/: test_transcription_service.py  test_utils.py
backend/src/htx_transcriber/: app.py  main.py  settings.py  utils.py
backend/src/htx_transcriber/api/: health_check.py
backend/src/htx_transcriber/services/: transcribe_processor.py  transcription_service.py
backend/tests/: README.md  conftest.py  test_transcription_queries.py
frontend/: Dockerfile  nginx.conf  package-lock.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: FileUpload.tsx  HealthStatus.tsx
frontend/src/services/: api.ts
