[project]
name = "htx-transcriber"
version = "0.1.0"
description = "Web application which allows upload and transcribe of audio files"
authors = [
    {name = "Ethan Le",email = "ductoanle@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "uvicorn (>=0.34.0,<0.35.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "openai-whisper (>=20240930,<20240931)",
    "alembic (>=1.15.2,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
